# typeaheadProject

./: Cargo.toml
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/auto-complete/: auto-complete.component.css  auto-complete.component.html  auto-complete.component.spec.ts  auto-complete.component.ts
src/: main.rs
